# MC_Polymer

./: .gitignore  CMakeLists.txt  CMakeLists.txt.test  CMakeLists_test.txt  README.md  Ring_Mu.xlsx  batch_config_generator.py  config_0000_M6_Linear_H6.0_mu-1.53.json  external_potential.py  learn_iter.cpp  matlab_interface.py  plot_custom_potential.py  postprocess_ring_density.py  process_outputs.py  python_potential_example.py  recal_equ.py  run_parallel_simulation.py  run_simulation.py  run_simulation_linear.py  run_simulation_ring.py  simData2.npy  simple_test.py  test_bulk_density_final.cpp  test_overlap.cpp  test_z_box.cpp  volume_change.py
.claude/: settings.json  settings.local.json
build_test/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  MuVTPolymer.sln  MuVTPolymer.vcxproj  MuVTPolymer.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  pymcpolymer.vcxproj  pymcpolymer.vcxproj.filters
bulk_ring/: bulk_parallel_summary.txt  plot_combined_asymmetric.py  run_bulk_parallel.py  test_bulk_density_final.cpp
bulk_ring/M8/: M8_mu_ex.csv  M8_mu_ex.npz  bulk_density_results_mu_-0.250.txt  bulk_density_results_mu_-0.500.txt  bulk_density_results_mu_-0.750.txt  bulk_density_results_mu_-1.000.txt  bulk_density_results_mu_0.000.txt  bulk_density_results_mu_0.250.txt  bulk_density_results_mu_0.500.txt  bulk_density_results_mu_0.750.txt  bulk_density_results_mu_1.000.txt  bulk_density_results_mu_1.250.txt  bulk_density_results_mu_1.500.txt  bulk_density_results_mu_1.750.txt  bulk_density_results_mu_2.000.txt  bulk_density_results_mu_2.250.txt  bulk_density_results_mu_2.500.txt  bulk_density_results_mu_2.750.txt  bulk_density_results_mu_3.000.txt  bulk_density_results_mu_3.250.txt  bulk_density_results_mu_3.500.txt  bulk_density_results_mu_3.750.txt  bulk_density_results_mu_4.000.txt  bulk_density_results_mu_4.250.txt  bulk_density_results_mu_4.500.txt  bulk_density_results_mu_4.750.txt  bulk_density_results_mu_5.000.txt  bulk_density_results_mu_5.250.txt  bulk_density_results_mu_5.500.txt  bulk_density_results_mu_5.750.txt  bulk_density_results_mu_6.000.txt
include/: Bulk_RingPolymer.h  MuVT_MC_LinearPolymer.h  MuVT_MC_LinearPolymer_Ext.h  MuVT_MC_RingPolymer.h  Utils.h
input/: Ring_mu_ex.csv
input/Linear_configs/: config_0000_M6_Linear_H6.0_mu0.50.json  config_0001_M6_Linear_H6.0_mu-1.50.json  config_0002_M6_Linear_H6.0_mu1.50.json  config_0002_M6_Linear_H6.0_mu3.71.json
input/Ring_configs/: config_0000_M8_Trivial_H20.0_mu2.00.json  config_0000_M8_Trivial_H8.0_mu1.23.json  config_0001_M8_Trivial_H20.0_mu3.00.json  config_0002_M8_Trivial_H20.0_mu4.00.json
input/Ring_configs_linux/: config_0000_M8_Trivial_H20.0_mu0.99.json  config_0001_M8_Trivial_H20.0_mu-0.49.json  config_0002_M8_Trivial_H20.0_mu0.69.json  config_0003_M8_Trivial_H20.0_mu0.38.json  config_0004_M8_Trivial_H20.0_mu3.81.json  config_0005_M8_Trivial_H20.0_mu3.18.json  config_0006_M8_Trivial_H20.0_mu2.95.json  config_0007_M8_Trivial_H20.0_mu1.23.json  config_0008_M8_Trivial_H20.0_mu3.35.json  config_0009_M8_Trivial_H20.0_mu-0.10.json  config_0010_M8_Trivial_H20.0_mu5.87.json  config_0011_M8_Trivial_H20.0_mu4.54.json  config_0012_M8_Trivial_H20.0_mu1.96.json  config_0013_M8_Trivial_H20.0_mu4.78.json  config_0014_M8_Trivial_H20.0_mu2.70.json  config_0015_M8_Trivial_H20.0_mu5.96.json  config_0016_M8_Trivial_H20.0_mu1.82.json  config_0017_M8_Trivial_H20.0_mu1.19.json  config_0018_M8_Trivial_H20.0_mu0.44.json  config_0019_M8_Trivial_H20.0_mu0.73.json  config_0020_M8_Trivial_H20.0_mu1.06.json  config_0021_M8_Trivial_H20.0_mu5.56.json  config_0022_M8_Trivial_H20.0_mu0.65.json  config_0023_M8_Trivial_H20.0_mu4.67.json  config_0024_M8_Trivial_H20.0_mu-0.51.json  config_0025_M8_Trivial_H20.0_mu5.99.json  config_0026_M8_Trivial_H20.0_mu3.95.json  config_0027_M8_Trivial_H20.0_mu4.17.json  config_0028_M8_Trivial_H20.0_mu2.54.json  config_0029_M8_Trivial_H20.0_mu4.05.json  config_0030_M8_Trivial_H20.0_mu5.35.json  config_0031_M8_Trivial_H20.0_mu5.84.json  config_0032_M8_Trivial_H20.0_mu2.57.json  config_0033_M8_Trivial_H20.0_mu0.65.json  config_0034_M8_Trivial_H20.0_mu5.71.json  config_0035_M8_Trivial_H20.0_mu-0.64.json  config_0036_M8_Trivial_H20.0_mu0.19.json  config_0037_M8_Trivial_H20.0_mu5.89.json  config_0038_M8_Trivial_H20.0_mu3.97.json  config_0039_M8_Trivial_H20.0_mu3.00.json  (+560 more)
input/configs/: config_0000_KnotTrefoil_H20.0_rho0.10.json  config_0001_KnotTrefoil_H20.0_rho0.10.json  config_0002_Knot4_1Knot_H20.0_rho0.10.json  config_0003_Knot4_1Knot_H20.0_rho0.10.json  config_0004_Knot5_1Knot_H20.0_rho0.10.json  config_0005_Knot5_1Knot_H20.0_rho0.10.json  config_0006_KnotTrefoil_H20.0_rho0.30.json  config_0007_KnotTrefoil_H20.0_rho0.30.json  config_0008_Knot4_1Knot_H20.0_rho0.30.json  config_0009_Knot4_1Knot_H20.0_rho0.30.json  config_0010_Knot5_1Knot_H20.0_rho0.30.json  config_0011_Knot5_1Knot_H20.0_rho0.30.json  config_0012_KnotTrefoil_H20.0_rho0.50.json  config_0013_KnotTrefoil_H20.0_rho0.50.json  config_0014_Knot4_1Knot_H20.0_rho0.50.json  config_0015_Knot4_1Knot_H20.0_rho0.50.json  config_0016_Knot5_1Knot_H20.0_rho0.50.json  config_0017_Knot5_1Knot_H20.0_rho0.50.json
postprocessed_results/: config_0000_M8_Trivial_H8.0_mu0.50_avg_density.npz  config_0001_M8_Trivial_H8.0_mu-1.50_avg_density.npz  config_0002_M8_Trivial_H8.0_mu1.23_avg_density.npz
postprocessing/: __init__.py  cal_NPDFT.py  pre_and_end_process.py  process_outputs.py  recal_equ.py  utils.py
python/: __init__.py  data_analysis.py  data_recorder.py  density.py  rg_calculator.py  system_analyzer.py  trace_recorder.py
script/: run_NVT_Ring.cpp  test_bulk_ring.cpp  test_bulk_ring_simple.cpp
src/: Bulk_RingPolymer.cpp  MuVT_MC_LinearPolymer.cpp  MuVT_MC_LinearPolymer.cpp.backup  MuVT_MC_LinearPolymer_Ext.cpp  MuVT_MC_RingPolymer.cpp  Utils.cpp  pybind11_module.cpp
temperature_step_potential_configs/: README.md  batch_config_generator_backup.py  example_step_potential_only.json  example_step_potential_temperature.json  example_temperature_only.json  run_simulation_backup.py
test_temp/: CMakeLists.txt
tests/: test_potential_table.py
(+28 files in other folders)
